language-server/src/tests/snapshots/gleam_language_server__tests__action__interpolate_string_allows_extracting_record_access_syntax.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  \"wibble wobble.some_field woo\"\n}"
---
----- BEFORE ACTION
pub fn main() {
  "wibble wobble.some_field woo"
          ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑    
}


----- AFTER ACTION
pub fn main() {
  "wibble " <> wobble.some_field <> " woo"
}
