language-server/src/tests/snapshots/gleam_language_server__tests__action__interpolate_string_does_not_add_empty_string_right_at_the_end.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  \"wibble wobble woo\"\n}"
---
----- BEFORE ACTION
pub fn main() {
  "wibble wobble woo"
                 ▔▔▔↑
}


----- AFTER ACTION
pub fn main() {
  "wibble wobble " <> woo
}
