language-server/src/tests/snapshots/gleam_language_server__tests__action__interpolate_string_inside_string.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  \"wibble wobble woo\"\n}"
---
----- BEFORE ACTION
pub fn main() {
  "wibble wobble woo"
          ▔▔▔▔▔▔↑    
}


----- AFTER ACTION
pub fn main() {
  "wibble " <> wobble <> " woo"
}
