language-server/src/tests/snapshots/gleam_language_server__tests__action__interpolating_string_as_first_pipeline_step_inserts_brackets.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  \"wibble wobble woo\" |> io.println\n}"
---
----- BEFORE ACTION
pub fn main() {
  "wibble wobble woo" |> io.println
          ▔▔▔▔▔▔↑                  
}


----- AFTER ACTION
pub fn main() {
  { "wibble " <> wobble <> " woo" } |> io.println
}
