language-server/src/tests/snapshots/gleam_language_server__tests__action__label_shorthand_action_works_on_labelled_pattern_call_args.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n    let Wibble(arg1: arg1, arg2: arg2) = todo\n    arg1 + arg2\n}\n\npub type Wibble { Wibble(arg1: Int, arg2: Int) }\n"
---
----- BEFORE ACTION

pub fn main() {
    let Wibble(arg1: arg1, arg2: arg2) = todo
    ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑
    arg1 + arg2
}

pub type Wibble { Wibble(arg1: Int, arg2: Int) }


----- AFTER ACTION

pub fn main() {
    let Wibble(arg1: , arg2: ) = todo
    arg1 + arg2
}

pub type Wibble { Wibble(arg1: Int, arg2: Int) }
