language-server/src/tests/snapshots/gleam_language_server__tests__action__label_shorthand_action_works_on_labelled_update_call_args.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n    let arg1 = 1\n    Wibble(..todo, arg1: arg1)\n}\n\npub type Wibble { Wibble(arg1: Int, arg2: Int) }\n"
---
----- BEFORE ACTION

pub fn main() {
    let arg1 = 1
    Wibble(..todo, arg1: arg1)
           ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑ 
}

pub type Wibble { Wibble(arg1: Int, arg2: Int) }


----- AFTER ACTION

pub fn main() {
    let arg1 = 1
    Wibble(..todo, arg1: )
}

pub type Wibble { Wibble(arg1: Int, arg2: Int) }
