language-server/src/tests/snapshots/gleam_language_server__tests__action__merge_case_branch_can_merge_branches_defining_the_same_variables.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn go(result) {\n  case result {\n    [Ok(value), ..] -> todo\n    [_, Error(value)] -> todo\n    _ -> todo\n  }\n}"
---
----- BEFORE ACTION
pub fn go(result) {
  case result {
    [Ok(value), ..] -> todo
     ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
    [_, Error(value)] -> todo
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑   
    _ -> todo
  }
}


----- AFTER ACTION
pub fn go(result) {
  case result {
    [Ok(value), ..] | [_, Error(value)] -> todo
    _ -> todo
  }
}
